k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: database
  name: database
  namespace: tci-newsgac
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    io.kompose.service: database
