k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: web
  name: web
  namespace: tci-newsgac
spec:
  ports:
  - name: "5050"
    port: 5050
    targetPort: 5050
  selector:
    io.kompose.service: web
