k8s/web-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: newsgac
  namespace: newsgac
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 30m
spec:
  rules:
    - host: newsgac.clariah.nl
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 5050
# TLS is handled by outside proxy
